src/objects/OM_RFP__c.object
<CustomObject>
    <description>Used to capture RFP information; is master detailed to oppty</description>
    <fields>
        <fullName>Current_Distributor__c</fullName>
        <label>Current Distributor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>OM_Anticipated_RFP_Release_Date__c</fullName>
        <label>Anticipated RFP Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Current_contract_Expiration_Date__c</fullName>
        <label>Current contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Unit</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Diversity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Diversity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Formal_Proposal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formal Proposal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_GM_from_Ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GM from Ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_GPO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GPO</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>OM_Buying_Contracting_Groups__c.OM_Group_Type__c</field>
                <operation>equals</operation>
                <value>GPO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>OM_Buying_Contracting_Groups__c</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Internal_Due_Date__c</fullName>
        <label>Internal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_Inventory_Solutions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inventory Solutions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>RFPs</relationshipLabel>
        <relationshipName>RFPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OM_Other_Purchasing_Affiliations__c</fullName>
        <label>Other Purchasing Affiliations</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strategic Value Partnership</fullName>
                </value>
                <value>
                    <fullName>MediChoice</fullName>
                </value>
                <value>
                    <fullName>Medical Action/AVID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Provider_Services_RVP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provider Services RVP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_RFP_Due_Date__c</fullName>
        <label>RFP Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OM_RFP_Power_of_One__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Power of One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OM_Technology__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Technology</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Business</fullName>
                </value>
                <value>
                    <fullName>Current Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Services__c</fullName>
        <label>Proposed Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PANDAC</fullName>
                </value>
                <value>
                    <fullName>Qsight</fullName>
                </value>
                <value>
                    <fullName>IPM</fullName>
                </value>
                <value>
                    <fullName>Kanban</fullName>
                </value>
                <value>
                    <fullName>RFID</fullName>
                </value>
                <value>
                    <fullName>Inventory Valuation</fullName>
                </value>
                <value>
                    <fullName>SurgiTrack</fullName>
                </value>
                <value>
                    <fullName>LUM</fullName>
                </value>
                <value>
                    <fullName>Preferred Access</fullName>
                </value>
                <value>
                    <fullName>Expanded Access</fullName>
                </value>
                <value>
                    <fullName>Outsourcing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>RFP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>